--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-js-shimmer-placeholder": "^1.0.7",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.0"
+    "react-native-screens": "^2.15.0",
+    "react-native-shimmer-placeholder": "^2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
