--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.12.8",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-js-shimmer-placeholder": "^1.0.7",
     "react-native-linear-gradient": "^2.5.6",
